# chords

./: Cargo.toml  LICENSE
src/: key.rs  lib.rs  main.rs  win.rs
src/linux/: mod.rs
src/nix/: uinput.rs
src/win/: codes.rs  mod.rs
src/windows/: mod.rs
