[package]
name = "chords"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["time", "rt", "rt-multi-thread", "macros"]}

[target.'cfg(windows)'.dependencies]
windows = { version = "0.34.0", features = [ "Win32_UI_Input_KeyboardAndMouse" ]}